--- a/index.html
+++ b/index.html
@@ -52,24 +52,52 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="hero">
-        <img src="..." alt="..." class="hero-image">
+    <div id="hero">
+        <img src="./images/new-story-thumbnail.webp" alt="tickets offer" class="hero-image">
 
         <div class="hero-text">
             <h1>Your tag line here</h1>
             <button class="cta-button">Buy Tickets</button>
         </div>
-    </section>
+    </div>
 
     <!-- Sections with Anchor links -->
     <section id="section1">
         <h2>About Us</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae nostrum explicabo consectetur, temporibus
             atque sed ipsum maxime totam expedita! In error numquam, sunt enim sed quaerat impedit atque a sapiente.</p>
+
+        <!-- Carousel -->
+        <div class="carousel-container">
+            <!-- Image slides -->
+            <div class="carousel-slide">
+                <img src="./images/dj-edits.webp" alt="dj at BoomTown festival">
+                <img src="./images/new-story-thumbnail.webp" alt="example">
+                <img src="./images/people-camping.webp" alt="camping">
+                <img src="./images/people-camping.webp" alt="camping">
+            </div>
+
+            <!-- Left and right arrows -->
+            <div class="carousel-navigation">
+                <button class="prev">&#10094;</button>
+                <button class="next">&#10095;</button>
+            </div>
+
+            <!-- Bullet points indicators -->
+            <div class="carousel-bullets">
+                <span class="bullet"></span>
+                <span class="bullet"></span>
+                <span class="bullet"></span>
+                <span class="bullet"></span>
+            </div>
+        </div>
+
     </section>
 
     <section id="section2">
         <h2>Services</h2>
+
+        <img src="./images/dj-edits.webp" alt="">
 
         <div class="web-cards">
             <div class="card small-card">Card 1</div>
@@ -81,6 +109,9 @@
     <section id="section3">
         <h2>Contact</h2>
         <p>Reach out to us for more information.</p>
+        <img src="./images/new-story-thumbnail.webp" alt="offer">
+
+        <p>Some additional text.</p>
     </section>
 
     <!-- Footer -->
@@ -91,6 +122,7 @@
                 <a href="#">Twitter</a>
                 <a href="#">Instagram</a>
             </div>
+
             <p>&copy; 2024 Your Company. All rights reserved.</p>
         </div>
     </footer>
