--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Hero Division -->
     <div id="hero">
         <img src="./images/new-story-thumbnail.webp" alt="tickets offer" class="hero-image">
 
         <div class="hero-text">
             <h1>Your tag line here</h1>
+            <p>Some text here.</p>
             <button class="cta-button">Buy Tickets</button>
         </div>
     </div>
@@ -97,20 +98,50 @@
     <section id="section2">
         <h2>Services</h2>
 
-        <img src="./images/dj-edits.webp" alt="">
-
         <div class="web-cards">
-            <div class="card small-card">Card 1</div>
-            <div class="card large-card">Card 2 (Bigger)</div>
-            <div class="card small-card">Card 3</div>
+            <!-- Card 01 -->
+            <div class="card small-card">
+                <img src="./images/dj-edits.webp" alt="web card image" class="card-image">
+                <div class="card-content">
+                    <h2 class="card-title">Card Title</h2>
+                    <p class="card-description">This is a short description of the card. It provides some details to
+                        engage the
+                        user.</p>
+                    <button class="cta-button" title="Find more info here.">Learn More</button>
+                </div>
+            </div>
+
+            <!-- Card 02 -->
+            <div class="card small-card">
+                <img src="./images/dj-edits.webp" alt="web card image" class="card-image">
+                <div class="card-content">
+                    <h2 class="card-title">Card Title</h2>
+                    <p class="card-description">This is a short description of the card. It provides some details to
+                        engage the
+                        user.</p>
+                    <button class="cta-button" title="Find more info here.">Learn More</button>
+                </div>
+            </div>
+
+            <!-- Card 03 -->
+            <div class="card small-card">
+                <img src="./images/dj-edits.webp" alt="web card image" class="card-image">
+                <div class="card-content">
+                    <h2 class="card-title">Card Title</h2>
+                    <p class="card-description">This is a short description of the card. It provides some details to
+                        engage the
+                        user.</p>
+                    <button class="cta-button" title="Find more info here.">Learn More</button>
+                </div>
+            </div>
         </div>
     </section>
 
     <section id="section3">
-        <h2>Contact</h2>
-        <p>Reach out to us for more information.</p>
         <img src="./images/new-story-thumbnail.webp" alt="offer">
 
+        <h2>Contact</h2>
+        <p>Reach out to us for more information.</p>
         <p>Some additional text.</p>
     </section>
 
